[package]
name = "webapp_sample"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
actix = "0.7"
actix-web = "0.7"
diesel = { version = "1.0.0", features = ["sqlite"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
dotenv = "0.9.0"
handlebars = "1.0.4"
